--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://football-shop-service-h6nq.onrender.com/api
+REACT_APP_API_URL=http://localhost:3000/api
 REACT_APP_FB_ID=1815462702244108
